--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "scheme": "Emp-mgmt-appe",
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -25,6 +26,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "17db2b90-241a-41c5-a7cc-92cdb822e91a"
+      }
     }
   }
 }
